폴더명 변경

--- a/1week/index.html
+++ b/1week/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="app">
-		<input type="text" placeholder="할 일!" v-model="inputTodo" v-on:keyup.enter="addTodo">
+		<input type="text" placeholder="할 일!" v-model="inputTodo" v-on:keyup="log">
 		<button v-on:click="addTodo">추가</button>
 		<ul>
 			<li v-for="(todo, index) in todos" v-on:click="removeTodo(index)">
