--- a/1week/exam.html
+++ b/1week/exam.html
@@ -14,7 +14,7 @@
 			<li v-for="todo in todos">{{ todo }}</li>
 		</ul>
 	</div>
-	<script src="/vue.js"></script>
+	<script src="../vue.js"></script>
 	<script>
 		new Vue({
 			el: '#app',
